public/view-orders.css
* {
  box-sizing: border-box;
}

body, html {
    height:100%;
    margin: 0;
}

body {
  background-image: url("https://img.elo7.com.br/product/original/1C102EA/adesivo-papel-de-parede-chevron-floral-escolha-a-cor.jpg");

  background-attachment: fixed;
  background-repeat: no-repeat;

}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #919D47;

}

.nav-right {
  float: right;
}

.home {
    float: right;
}


.title {
  position: absolute;
  font-size: 33px;
  color: white;
  font-family: 'Dancing Script', cursive;
  font-weight: bold;
  padding-top: 9px;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-family: 'Dancing Script', cursive;
    font-size: 25px;
}

li .home:hover {
    background-color: #738637;
}

.box {

  background-color: #919D47;
  width: 1000px;
  height: auto;
  border-radius: 15px;
  vertical-align: center;
  margin-top: 35px;
  padding-bottom: 15px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding: 20px;
}

.title-box {
  background-color: #919D47;
  width: 550px;
  height: 70px;
  border-radius: 15px;
  vertical-align: center;
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.title-box h1{
  font-family: 'Dancing Script', cursive;
  font-size: 40px;
  font-weight: bold;
  text-align: center;
  padding-top: 10px;
  color: ivory;

}


img {
  width: 300px;
  border-radius: 6px;
  margin-top: 30px;
}


.orders {
  display: inline-block;
  text-align: center;
}

.orders h1{
  font-family: 'Dancing Script', cursive;
  font-size: 40px;
  font-weight: bold;
  color: ivory;
  text-align: center;
}

.orders p{
  font-size: 20px;
}

.orders .div-left {
  float: left;
  width: 495px;
  height: 460px;
  border: 6px solid ivory;
  padding: 40px 10px;
  font-family: 'Raleway', sans-serif;
  color: ivory;
  font-weight: bold;
  border-radius: 5%;
}

.orders .div-right {
  position: absolute;
  left: 500px;
  width: 450px;
  height: 460px;
  border: 6px solid ivory;
  margin-left: 30px;
  padding: 40px 10px;
  font-family: 'Raleway', sans-serif;
  color: ivory;
  font-weight: bold;
  border-radius: 5%;
}

.orders button {
  margin-top: 10px;
  background: #738637;
  border: none;
  font-family: 'Raleway', sans-serif;
  font-size: 25px;
  font-weight: bold;
  color: ivory;
  height: 40px;
  border-radius: 4px;
  padding: 0 10px;
}

.orders button:hover {
  background: darkolivegreen;
}



@media (max-width: 1050px) {
  .product {
    display: none;
  }
  .box {
    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
    width: -moz-max-content;    /* Firefox/Gecko */
    width: -webkit-max-content; /* Chrome */
  }

}

@media (max-width: 550px) {
  .details h1 {
    font-size: 30px;
  }
  .details h2 {
    font-size: 23px;
  }
  .orders .div-left {
    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
    width: -moz-max-content;    /* Firefox/Gecko */
    width: -webkit-max-content; /* Chrome */
    height: intrinsic;           /* Safari/WebKit uses a non-standard name */
    height: -moz-max-content;    /* Firefox/Gecko */
    height: -webkit-max-content; /* Chrome */
  }
  .logOut {
    display: none;
  }
  .title {
    font-size: 28px;
    padding-top: 12px;
  }
  .title-box h1 {
    /*padding-top: 5px;*/
    font-size: 30px;
  }
  .title-box {
    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
    width: -moz-max-content;    /* Firefox/Gecko */
    width: -webkit-max-content; /* Chrome */
    height: intrinsic;           /* Safari/WebKit uses a non-standard name */
    height: -moz-max-content;    /* Firefox/Gecko */
    height: -webkit-max-content; /* Chrome */
  }
}

